# noisy-skyy

./: .gitignore  Cargo.toml  launcher.sh
src/: constants.rs  data_collector.rs  error_correction.rs  main.rs  receiver.rs  transmitter.rs
testing/: sample1.txt
